// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`output-mapper-test args is called with the right arguments 1`] = `
Array [
  Array [
    "Hello",
    "WARN",
    "test-context",
    Array [
      "Hello",
      1,
      Object {
        "a": 1,
      },
    ],
    0,
  ],
  Array [
    1,
    "WARN",
    "test-context",
    Array [
      "Hello",
      1,
      Object {
        "a": 1,
      },
    ],
    1,
  ],
  Array [
    Object {
      "a": 1,
    },
    "WARN",
    "test-context",
    Array [
      "Hello",
      1,
      Object {
        "a": 1,
      },
    ],
    2,
  ],
]
`;

exports[`output-mapper-test it is applied is applied to all parameters 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [],
  "WARN" => Array [],
  "ERROR" => Array [
    Array [
      "[1] [101m[97mERROR ctx 2 4 6 8 10 12[39m[49m",
      "ERROR",
      "ctx",
    ],
  ],
}
`;

exports[`output-mapper-test it is applied is applied to the first parameter 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [],
  "WARN" => Array [],
  "ERROR" => Array [
    Array [
      "[1] [97m[101mERROR ctx 10000[49m[39m",
      "ERROR",
      "ctx",
    ],
  ],
}
`;

exports[`output-mapper-test transport can provide its own mapper 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [],
  "WARN" => Array [],
  "ERROR" => Array [
    Array [
      "[1] [97m[101mERROR ctx 15[49m[39m",
      "ERROR",
      "ctx",
    ],
  ],
}
`;
